[package]
name = "rsush"
version = "0.1.0"
authors = ["Łukasz Szpakowski <luckboy@vp.pl>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnmatch-sys = "1.0.0"
getopt = "1.1.3"
libc = "0.2.113"
sealed_test = "1.0.0"
