[package]
name = "rsush"
version = "0.2.1"
authors = ["Łukasz Szpakowski <luckboy@vp.pl>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Rust single unix shell."
repository = "https://github.com/luckboy/rsush"
keywords = ["cli", "shell", "unix"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnmatch-sys = "1.0.0"
getopt = "1.1.3"
libc = "0.2.113"
rustyline = "10.0.0"

[dev-dependencies]
sealed_test = "1.0.0"
